--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: 0
 
 spring:
+  application:
+    name: order-service
   config:
     import: optional:configserver:http://localhost:8079
   cloud:
@@ -14,9 +16,3 @@ spring:
       password: password
     discovery:
       enabled: true
-  name: order-service
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
